fixed responsiveness on iPhone 5

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,6 @@ h1 {
 .card {
     color: white;
     width: 900px;
-    /* height: 50vh; */
     position: relative;
 }
 
@@ -41,5 +40,22 @@ p {
 @media (max-width:992px) {
     #join-email-list {
         padding-top: 24px !important;
+    }
+}
+
+@media (max-width:575.98px) {
+    h1 {
+        font-size: 1.3em;
+    }
+
+    p,
+    .footer,
+    .btn,
+    .form-control {
+        font-size: smaller;
+    }
+
+    body {
+        height: auto;
     }
 }
